--- a/poo-lab.html
+++ b/poo-lab.html
@@ -95,9 +95,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(01/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i> --></li>
-					<li>Trabalho 2 - 30 pts <b>(05/08)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i> --></li>
-					<li>Trabalho 3 - 30 pts <b>(02/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
+					<li>Trabalho 1 - 30 pts <b>(01/07)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Trabalho 2 - 30 pts <b>(05/08)</b> </li>
+					<li>Trabalho 3 - 30 pts <b>(02/09)</b> </li>
 					<li>Exercícios Práticos - 10 pts <b>(02/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
