--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -166,7 +166,8 @@
 					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/"> <img src="images/new2.gif" alt="" height="11" width="28"> Cursos gratuitos de JavaScript e o framework Vue.js</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre como criar um Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaulas sobre AngularJS</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre Django 2 Web Framework (Python)</a></li> 
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre Django 2 Web Framework (Python)</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso Completo de Java Spring Boot</a></li>
 					</ul>
 					</div> 
 					<div>
