--- a/poo.html
+++ b/poo.html
@@ -96,10 +96,10 @@
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/6qpBMmhfENM"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GLUkBt89dZ4"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a></li>
