--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -123,7 +123,7 @@
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
