--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -125,7 +125,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 07 - IMC.pdf"> Aula 07 - Cálculo do IMC </a></button></li>
@@ -167,7 +167,8 @@
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre como criar um Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaulas sobre AngularJS</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre Django 2 Web Framework (Python)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso Completo de Java Spring Boot</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso Completo do framework Java Spring Boot</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=Dzuiy-JNi-E"> <img src="images/new2.gif" alt="" height="11" width="28"> Criando um Blog com Python e o framework Django</a></li>
 					</ul>
 					</div> 
 					<div>
