--- a/poo-lab.html
+++ b/poo-lab.html
@@ -113,8 +113,8 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 				     	<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
