--- a/gsi526.html
+++ b/gsi526.html
@@ -92,7 +92,7 @@
 					<li>Lista 3 - 5 pts <b>(06/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
-					<div>
+					<!--<div>
 						<b>Material:</b>  
 						<ul> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
@@ -138,8 +138,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8.pdf"> Aula 8</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9.pdf"> Aula 9</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10.pdf"> Aula 10</a></button></li>
-						</ul> -->
-					</div>
+						</ul> 
+					</div> -->
 					<!-- <div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
