--- a/gsi526.html
+++ b/gsi526.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i></li>
-					<li>Prova 2 - 30 pts <b>(29/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i> --></li>
+					<li>Prova 2 - 30 pts <b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i></li>
 					<li>Prova 3 - 30 pts <b>(06/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
 					<li>Lista 1 - 5 pts <b>(01/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 2 - 5 pts <b>(29/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
@@ -103,9 +103,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-arquitetura.pptx"> Aula 06 - Arquitetura de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)</li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li> 
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
